tests/NormalTests/paczka2/big_fuzzy/88081335.err
Error in line 7: UUH27 S332 72,7
Error in line 11: UUH27 S940 91,5
Error in line 17: AqUWclcax S940 18,3
Error in line 18: AqUWclcax S18 94,6
Error in line 22: AqUWclcax S940 73,5
Error in line 15: UUH27 A786 86,7
Error in line 46: TnQkD7OMifR S38 -3,3
Error in line 49: RPp5Ec S332 -2,0
Error in line 48: TnQkD7OMifR S18 1863,6
Error in line 54: AqUWclcax S332 26,5
Error in line 56: 1AsbsajEMmq S940 96,7
Error in line 57: TnQkD7OMifR S332 56,8
Error in line 64: tnD2MVv S332 18,5
Error in line 62: TnQkD7OMifR S18 56,9
Error in line 66: S18 A786 3,6
Error in line 68: AqUWclcax A786 22,2
Error in line 69: TnQkD7OMifR S332 3,6
Error in line 72: AqUWclcax S332 87,8
Error in line 70: S18 S940 95,3
Error in line 84: 1AsbsajEMmq S18 24,7
Error in line 88: AqUWclcax S18 190,3
Error in line 97: TnQkD7OMifR S940 54,4
Error in line 110: A­UWclcax S332 -2,6
Error in line 100: AqUWclcax S332 70,5
Error in line 105: 1AsbsajEMmq S940 74,3
Error in line 122: UUH27 A786 41,9
Error in line 129: 1AsbsajEMmq A786 61,8
Error in line 156: S18 S940 80,1
Error in line 158: UUH27 A786 78,6
Error in line 164: S18 A786 64,5
Error in line 161: TnQkD7OMifR S18 70,2
Error in line 170: TnQkD7OMifR A7?6 6,?
Error in line 165: S18 S18 71,0
Error in line 168: TnQkD7OMifR A786 4,8
Error in line 188: tnD2MVv S332 -2,0
Error in line 189: tnD2MVv S332 91,54
Error in line 190: UUH27 S332 3,53
Error in line 193: UUH27 S332 12,0
Error in line 178: AqUWclcax A786 83,4
Error in line 198: AqUWclcax S940 67,1
Error in line 197: 1AsbsajEMmq A786 74,1
Error in line 208: TnQkD7OMifR S940 34,3
Error in line 182: S18 S18 80,1
Error in line 214: UUH27 S18 90,6
Error in line 212: TnQkD7OMifR S332 12,2
Error in line 222: UUH27 S940 25,2
Error in line 219: tnD2MVv S332 137,4
Error in line 224: S18 S18 94,8
Error in line 231: S18 S940 61,7
Error in line 227: UUH27 S332 53,7
Error in line 234: UUH27 S18 3,1
Error in line 235: 1AsbsajEMmq S18 98,9
Error in line 232: S18 S18 58,4
Error in line 243: 1AsbsajEMmq S332 280,5
